Wed Mar  9 20:26:52 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/Core.ecore:

	  Added Element class and Comment class with Element optionally owning a Comment.
          Entity now inherits from Element.

        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS.ecore:
        * tools/modeling/plugins/org.opendds.modeling.model/model/Types.ecore:

	  Updated so that all class (eventually) inherit from Element. This way comments
	  can be added to all modeling elements.

        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS.genmodel:

	  Re-generated and set Multiline property for Comment body to true.

        * tools/modeling/plugins/org.opendds.modeling.model/model/Core.ecore_diagram:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DataLib.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DcpsLib.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_PolicyLib.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/Types.ecore_diagram:
        * tools/modeling/plugins/org.opendds.modeling.common/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.model.edit/plugin.properties:

	  Auto-generated dependency updates.

        * tools/modeling/plugins/org.opendds.modeling.common/src/org/opendds/modeling/common/gmf/ElementCommentFilter.java:
        * tools/modeling/plugins/org.opendds.modeling.common/src/org/opendds/modeling/common/gmf/ElementCommentPropertySection.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/src/org/opendds/modeling/model/opendds/diagram/datalib/part/ElementCommentFilter.java: