@@ -1,3 +1,15 @@
+Wed Mar  9 20:54:03 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
+
+          Now that Service_Participant (as of Tue Mar  8 20:11:23) is releasing
+          its reference on the POA  (and the other references are cleaned up)
+          the ORB really is shutting down and going away, the entirity of
+          finalize() can't be called from within our event handler inside of
+          ORB::run().  Instead call finalize() after run() returns.  This could
+          break code that's depending on calling run() multiple times, but we
+          don't know of such code.
+
 Wed Mar  9 20:26:52 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.model/model/Core.ecore:
